[package]
name = "adder"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { path = "../../near-sdk" }

[package.metadata.near.reproducible_build]
image = "dj8yfo/sourcescan:0.x.x-dev-cargo-near-finalization"
image_digest = "sha256:f86a095cb3daed21d0b5f86a4b5d9da0c0e26835f85c42678e1d460c9caa2c12"
container_build_command = ["cargo", "near", "build"]
source_code_git_url = "https://github.com/near/near-sdk-rs.git"

[dev-dependencies]
near-workspaces = "0.10.1"
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"
near-abi = "0.4.0"
zstd = "0.11"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
