[package]
name = "adder"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
repository = "https://github.com/dj8yfo/near-sdk-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { path = "../../near-sdk" }

[package.metadata.near.reproducible_build]
image = "dj8yfo/sourcescan:0.x.x-dev-cargon-f-unlocked"
image_digest = "sha256:f397f49e087d2f0654fed47bfeeed224e016cc02e32a4d346eb45834cfa950f1"
container_build_command = ["cargo", "near", "build"]
source_code_git_url = "https://github.com/dj8yfo/near-sdk-rs.git"

[dev-dependencies]
near-workspaces = "0.10.1"
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"
near-abi = "0.4.0"
zstd = "0.11"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
