[package]
name = "adder"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { path = "../../near-sdk" }

[package.metadata.near.reproducible_build]
image = "dj8yfo/sourcescan:0.x.x-dev-git-pull-134-2stg"
image_digest = "sha256:e09f2f8968783e00f9f7d7ccdbf643dffac97ed6d51231c3c0b6626de54d1049"
container_build_command = ["cargo", "near", "build"]
source_code_git_url = "https://github.com/dj8yfo/near-sdk-rs.git"

[dev-dependencies]
near-workspaces = "0.11.0"
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"
near-abi = "0.4.0"
zstd = "0.13"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
